--- a/portfolio.html
+++ b/portfolio.html
@@ -286,7 +286,7 @@
     <!-- FOOTER -->
     <footer class="page-footer">
       <div class="page-footer-container container">
-        <div>
+        <div class="logo-text-footer-wrapper">
           <a href="./index.html" class="logo-text logo-text-footer link">
             <span class="logo-text-accent">Web</span>Studio
           </a>
@@ -295,7 +295,8 @@
             digital marketing & growth solutions.
           </p>
         </div>
-        <div>
+
+        <div class="footer-social-networks-wrapper">
           <h3 class="footer-subtitle">Social media</h3>
           <ul class="footer-social-networks-list list">
             <li class="footer-social-networks-item">
@@ -347,6 +348,35 @@
               </a>
             </li>
           </ul>
+        </div>
+
+        <div class="footer-subscribe-form">
+          <p class="footer-subtitle">Subscribe</p>
+          <form class="footer-form">
+            <span class="footer-form-wrapper">
+              <label class="footer-form-field">
+                <input
+                  type="email"
+                  name="user-email-footer"
+                  class="footer-form-input"
+                  placeholder="E-mail"
+                  required
+                />
+              </label>
+
+              <button class="footer-form-submit" type="submit">
+                Subscribe
+                <svg
+                  aria-label="submit"
+                  class="footer-submit-icon"
+                  width="24"
+                  height="24"
+                >
+                  <use href="./images/icons.svg#icon-send"></use>
+                </svg>
+              </button>
+            </span>
+          </form>
         </div>
       </div>
     </footer>
