--- a/index.html
+++ b/index.html
@@ -65,17 +65,17 @@
     <!-- MAIN -->
     <main>
       <!-- Hero -->
-      <!-- <section class="hero-section">
+      <section class="hero-section">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button type="button" class="modal-btn" data-modal-open>
             Order Service
           </button>
         </div>
-      </section> -->
+      </section>
 
       <!-- Our advantages -->
-      <!-- <section class="advantages-section section">
+      <section class="advantages-section section">
         <div class="advantages-section-container container">
           <h2 class="section-title hidden">Our advantages</h2>
           <ul class="advantages-list list">
@@ -149,10 +149,10 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- What are we doing -->
-      <!-- <section class="examples-of-work">
+      <section class="examples-of-work">
         <div class="examples-of-work-container container">
           <h2 class="section-title">What are we doing</h2>
           <ul class="examples-of-work-list list">
@@ -182,10 +182,10 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- Our Team -->
-      <!-- <section class="team-section section">
+      <section class="team-section section">
         <div class="team-section-container container">
           <h2 class="section-title">Our Team</h2>
           <ul class="team-list list">
@@ -439,10 +439,10 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- Customers -->
-      <!-- <section class="customers-section section">
+      <section class="customers-section section">
         <div class="customers-section-container container">
           <h2 class="section-title">Customers</h2>
           <ul class="customers-list list">
@@ -532,11 +532,11 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
 
     <!-- FOOTER -->
-    <!-- <footer class="page-footer">
+    <footer class="page-footer">
       <div class="page-footer-container container">
         <div class="logo-text-footer-wrapper">
           <a href="./index.html" class="logo-text logo-text-footer link">
@@ -631,10 +631,10 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
 
     <!-- MODAL WINDOW -->
-    <!-- <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close-btn" data-modal-close>
           <svg
@@ -740,6 +740,6 @@
       </div>
     </div>
 
-    <script src="./js/modal.js"></script> -->
+    <script src="./js/modal.js"></script>
   </body>
 </html>
